2006-05-09  Hendrik Tews  <tews@debian>

	ELSA:
	* add -oc option to set file name for marshalled ocaml ast
	* grepped all tracingSys's into doc/tracing-options.txt

2006-05-09  Hendrik Tews  <tews@localhost.localdomain>

	ELSA
	* put callbacks for types from cc_flags into cc_ml_constructors.ml
	* add a callback for marshalling (from ocaml into a file)
	* marshal ocaml ast in x.ocaml-ast if -tr marshalOcaml
	* rename marshall.... into marshal

2006-05-08  Hendrik Tews  <tews@debian>

	AST:
	* divide ocaml material into the type definition (goes into
	xx_type.ml) and the other material (goes into xx.ml); adjust
	Makefiles accordingly

2006-05-04  Hendrik Tews  <tews@penguin.cs.kun.nl>

	* timing and GC experiments

2006-05-03  Hendrik Tews  <tews@debian>

	* nullable comment that has not been triggered: TP_type.name
	
	* nullpointer exception without nullable comment:
	PQ_qualifier.templArgs
	PQ_template.templArgs
	E_stringLit.continuation
	E_delete.expr
	FullExpression.expr
	TemplateDeclaration.params
	TemplateArgument.next
	

2006-05-03  Hendrik Tews  <tews@ithif59.inf.tu-dresden.de>

	ELSA:
	* use TRACE env var in regrtest 
	* add another 13 nullable's
	* regression test pass now with ocaml serialization !!

2006-05-03  Hendrik Tews  <tews@debian>

	AST:
	* pointerType option to register nullable pointer types like
	  StringRef; all these pointer types are stored in the 
	  new global StringSet pointerTypes 
	* configured OCAMLC to avoid perl warning

	ELSA:
	* fixed null pointer problem in PQ_qualifier, FullExpression
	

2006-05-02  Hendrik Tews  <tews@penguin.cs.kun.nl>

	SMBASE:
	* deleted to nullable define
	
	AST: 
	* added nullable flag to contructor arguments
	  + ast syntax: astclass(nullable ... )
	  + checked for in parseCtorArg (together with owner)
	* ocaml marshalling translates nullable into option types
	* assertion checks for nullable fields in constructors are
	  disabled for the moment (seems some fields are filled in later)