@@ -1,3 +1,7 @@
+2006-05-10  Hendrik Tews  <tews@debian>
+
+	* added semantic dir and dumpast utility
+
 2006-05-09  Hendrik Tews  <tews@debian>
 
 	ELSA:
